CS-520 Layout and wrapping corrections

--- a/csatar-plugins/csatar/assets/recordlist/recordList.css
+++ b/csatar-plugins/csatar/assets/recordlist/recordList.css
@@ -4,7 +4,7 @@
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%2378863F' stroke-linecap='round' stroke-linejoin='round' stroke-width='3.5' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
     background-repeat: no-repeat;
     background-position: right center;
-    background-size: 12px 12px;
+    background-size: 10px 10px;
     padding: 0px !important;
 }
 
